Fixed login name spilling over border
git-svn-id: http://ala-hubs.googlecode.com/svn/trunk/hubs-webapp@151 1df052cb-f7c2-36cd-ec53-7bc1070de0c5

--- a/src/main/webapp/css/record.css
+++ b/src/main/webapp/css/record.css
@@ -208,12 +208,14 @@ table.occurrenceTable {
 td.annoText {
     width: 24px;
 }
-#jsonLink {
+#contentBox #jsonLink {
     float:right;
     width: 200px;
     font-size: 11px;
     vertical-align: bottom;
-    margin-top: 5px;
+    text-align: right;
+    line-height: 1.2em;
+    color: #555;
 }
 h2#headingSciName {
     color: #555;
